PrendasSuperiores y Carrito a medias

--- a/PamCa_PF/nbproject/project.properties
+++ b/PamCa_PF/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Buscador_Ropa_PF
-main.class=Buscador_Ropa.Men\u00fa_Admin
+main.class=Buscador_Ropa.Men\u00fa_inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
